--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: No Place
 SEOTitle: Bugtide | No Place
-header-img: img/post-bg-desk.jpg
+header-img: img/girlandcat.jpg
 email: bugtide@outlook.com
 description: "Life is simple.Make chioces and don't look back."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
