--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: No Place
-SEOTitle: Bugtide | No Place
+title: Sprint#51264
+SEOTitle: Bugtide | Sprint#51264
 header-img: img/girlandcat.jpg
 email: bugtide@outlook.com
 description: "Life is simple.Make chioces and don't look back."
