--- a/_config.yml
+++ b/_config.yml
@@ -60,13 +60,13 @@ kramdown:
 # disqus_username: qiubaiying
 
 # Gitalk
-#gitalk:
- # enable: true    #是否开启Gitalk评论
- #clientID: f2c84e7629bb1446c1a4                            #生成的clientID
- #clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
- # repo: 404sprint.github.io    #仓库名称
- # owner: 404sprint    #github用户名
- # admin: 404sprint
+gitalk:
+  enable: true    #是否开启Gitalk评论
+ clientID: 8bd97a438d0512dd0bff                            #生成的clientID
+ clientSecret: 85cfc96366e9b2da9a7210aef951361f9227c0e3    #生成的clientSecret
+  repo: 404sprint.github.io    #仓库名称
+  owner: 404sprint    #github用户名
+  admin: 404sprint
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
